package app.Adapter;

public interface AlgorithmInterface {
    double[][] calculate();
}
